[package]
version = "0.1.0"
name = "superblock-script"
edition = "2021"
default-run = "superblock"

[[bin]]
name = "superblock"
path = "src/bin/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

# Temporarily disabled - need to update for superblock structure
# [[bin]]
# name = "evm"
# path = "src/bin/evm.rs"

# [[bin]]
# name = "vkey"
# path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "5.0.8"
sp1-recursion-gnark-ffi = { version = "5.0.8", features = ["native"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
superblock-lib = { path = "../lib" }
dotenv = "0.15.0"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"

[build-dependencies]
sp1-build = "5.0.8"